--- a/FrontEnd/html/News.html
+++ b/FrontEnd/html/News.html
@@ -12,6 +12,7 @@
     <script src="../javascript/Section_one_slide.js"></script>
     <script src="../javaScript/section_one_news.js"></script>
     <script src ="../javaScript/News.js"></script>
+    <script src="../javaScript/Home.js"></script>
 
 </head>
 <body>
@@ -30,7 +31,7 @@
     <!-- Logo -->
     <div class="logo">
     <a href="Home.html">
-    <span class="logo-s" style="color: Orange">ThanhGiangShop</span>
+    <span class="logo-s" style="color: Orange">Văn Thành Shop</span>
     </a>
     </div>
 
@@ -44,13 +45,6 @@
 
     <div class="news-btn">
     <i class="fa-solid fa-pager"></i> Tin Tức
-    <div class="news-menu">
-        <ul>
-        <li><a href="">Tin công nghệ</a></li>
-        <li><a href="">Khuyến mãi</a></li>
-        <li><a href="">Sự kiện</a></li>
-        </ul>
-    </div>
     </div>
 
 
@@ -59,16 +53,22 @@
     <input type="text" placeholder="Bạn muốn mua gì hôm nay?">
     <i class="fa-solid fa-magnifying-glass"></i>
     </div>
-
     <!-- Cart -->
     <div class="cart">
-    <a href="Cart.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
+        <a href="Carts.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
     </div>
 
-    <!-- Login nút đăng nhập  -->
-    <a href="LoginClient.html"><button class="btn login">
-    <i class="fa fa-user"></i> Đăng nhập
-    </button></a>
+    <div class="login-button" id="login_button">
+        <i class="fa fa-user"></i> Tài khoản
+        <div class="accout-menu-two">
+        <ul>
+            <li><a href="LoginClient.html">Đăng nhập</a></li>
+            <li><a href="Profile.html">Profile </a></li>
+            <li><a href="Register.html">Đăng xuất</a></li>
+        </ul>
+        </div>
+    </div>
+
 </div>
 </header>
 
