--- a/FrontEnd/html/Phone.html
+++ b/FrontEnd/html/Phone.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="../css/Home_section_three.css">
 <link rel="stylesheet" href="../css/Home_footer.css">
 <link rel="stylesheet" href="../css/Home_header.css">
+<script src="../javaScript/Home.js"></script>
+
 </head>
 <body>
     <!-- header -->
@@ -50,7 +52,7 @@
 
     <!-- Cart -->
     <div class="cart">
-    <a href="Cart.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
+    <a href="Carts.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
     </div>
 
     <!-- Login nút đăng nhập  -->
