--- a/FrontEnd/html/Introduce.html
+++ b/FrontEnd/html/Introduce.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới Thiệu </title>
+    <!-- <link rel="stylesheet" href="../css/Home_header.css"> -->
+    <link rel="stylesheet" href="../css/Home_footer.css">
+    <link rel="stylesheet" href="../css/Home_section_three.css">
+    <script src="../javaScript/Home.js"></script>
+
 </head>
 <body>
     <div class="header"> GIỚI THIỆU VỀ THÀNH SHOPPING </div>
@@ -32,7 +37,40 @@
             font-size: 20px;
             align-items: center;
             margin-left:500px;
+            height:800px;
         }
     </style>
+<div class="section-three">
+    <div class="section-three-content">
+    <div class="box">
+        <div class="box-Head"> Về Văn Thành Shop </div>
+        <a href="">Giới Thiệu Công Ty</a>
+        <a href="">Tuyển Dụng</a>
+        <a href="">Liên Hệ</a>
+    </div>
+    <div class="box">
+        <div class="box-Head"> Tổng Dài hỗ trợ miễn phí </div>
+        <div class="box-Body"> Tư Vấn-Mua Hàng : 999999999 (7h - 22h thứ 2-7)</div>
+        <div class="box-Body"> CSKH: 999999999 (8h - 21h hàng ngày)</div>
+    </div>
+    <div class="box">
+    <div class="box-Head"> Hỗ trợ khách hàng </div>
+    <a href="">Chính sách bảo hành</a>
+    <a href="">Chính sách đổi trả</a>
+    <a href="">Hướng dẫn mua hàng</a>
+    </div>
+    <div class="box">
+        <div class="box-Head"> Kết nối với chúng tôi </div>
+        <a href="facebook.com"><i class="fa-brands fa-facebook"></i> Facebook</a>
+        <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
+        <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
+        <a href=""><i class="fa-brands fa-tiktok"></i> Tiktok</a>
+    </div>
+    </div>
+</div>
+
+<div class="footer">
+    <span>© 2025 Công ty Văn Thành Shop. GPDKKD: 123456789 do Sở KHĐT TP.Lào Cai cấp ngày 24/07/2025. Địa chỉ: Lào Cai. Điện thoại: 999999999. Email:luvanthanh@gmail.com
+</div>
 </body>
 </html>
