--- a/FrontEnd/html/ListNews.html
+++ b/FrontEnd/html/ListNews.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/Home_section_one.css">
     <script src="../javaScript/NewsList.js"></script>
     <link rel="stylesheet" href="../css/NewsList.css">
+    <script src="../javaScript/Home.js"></script>
 </head>
 <body>
 <header class="navbar">
@@ -52,13 +53,20 @@
 
     <!-- Cart -->
     <div class="cart">
-    <a href="Cart.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
+    <a href="Carts.html"> <i class="fa-solid fa-cart-shopping"></i>Giỏ hàng</a>
     </div>
 
     <!-- Login nút đăng nhập  -->
-    <a href="LoginClient.html"><button class="btn login">
-    <i class="fa fa-user"></i> Đăng nhập
-    </button></a>
+    <div class="login-button" id="login_button">
+        <i class="fa fa-user"></i> Tài khoản
+        <div class="accout-menu-two">
+        <ul>
+            <li><a href="LoginClient.html">Đăng nhập</a></li>
+            <li><a href="Profile.html">Profile </a></li>
+            <li><a href="Register.html">Đăng xuất</a></li>
+        </ul>
+        </div>
+    </div>
 </div>
 </header>
 
