sua them front end

--- a/FrontEnd/html/Carts.html
+++ b/FrontEnd/html/Carts.html
@@ -74,7 +74,33 @@
 
   <div class="section-one">
     <div class="list-carts" id="list_carts"><!-- Các sản phẩm trong giỏ hàng sẽ được hiển thị ở đây --></div>
-    <div class = ></div>
+    <div class = "information_cart">
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th>Thông tin để nhận hàng</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Họ Và Tên Người </td>
+            <td><input type="text"></td>
+          </tr>
+          <tr>
+            <td>Địa Chỉ nhận Hàng</td>
+            <td><input type="text"></td>
+          </tr>
+          <tr>
+            <td>Số Điện thoại người nhận</td>
+            <td><input type="text"></td>
+          </tr>
+          <tr>
+            <td class="order-button">Đặt Hàng</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 
 
