sua chua backend và frontend

--- a/FrontEnd/html/Carts.html
+++ b/FrontEnd/html/Carts.html
@@ -96,7 +96,17 @@
             <td><input type="text"></td>
           </tr>
           <tr>
-            <td class="order-button">Đặt Hàng</td>
+            <td>Chọn Phương thức thanh toán</td>
+            <td>
+              <select id="fruit" name="fruit">
+                <option value="apple">Thanh toán khi nhận hàng</option>
+                <option value="banana">Thanh toán bằng Vietted Pay</option>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td>Tổng tiền cần thanh toán</td>
+            <td id="sum_money_carts"></td>
           </tr>
         </tbody>
       </table>
