--- a/FrontEnd/html/News.html
+++ b/FrontEnd/html/News.html
@@ -37,14 +37,15 @@
 
     <!-- Menu -->
     <div class="btn">
-    <i class="fa-solid fa-house-user"></i><a href="Home.html">Trang Chủ </a>
+        <i class="fa-solid fa-house-user"></i><a href="Home.html">Trang Chủ </a>
     </div>
     <div class="btn">
-    <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
     </div>
 
+    <!-- tin tucws -->
     <div class="news-btn">
-    <i class="fa-solid fa-pager"></i> Tin Tức
+        <a href="ListNews.html" ><i class="fa-solid fa-pager"></i> Tin Tức</a>
     </div>
 
 
