login and logout

--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -45,7 +45,7 @@
 
       <!-- gioio thieu -->
       <div class="btn">
-        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" rel="noopener noreferrer" >Giới Thiệu</a>
       </div>
         <!-- tin tucws -->
       <div class="news-btn">
@@ -72,7 +72,7 @@
           <ul>
             <li><a href="LoginClient.html">Đăng nhập</a></li>
             <li><a href="Profile.html">Profile </a></li>
-            <li><a href="Register.html">Đăng xuất</a></li>
+            <li><a id="logout_button" onclick="logout()">Đăng xuất</a></li>
           </ul>
         </div>
       </div>
