--- a/FrontEnd/html/ListNews.html
+++ b/FrontEnd/html/ListNews.html
@@ -37,7 +37,7 @@
     </div>
     <!-- giới thiêu -->
     <div class="btn">
-    <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
+    <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" rel="noopener noreferrer" >Giới Thiệu</a>
     </div>
 
     <div class="news-btn">
