--- a/FrontEnd/html/Profile.html
+++ b/FrontEnd/html/Profile.html
@@ -40,7 +40,7 @@
 
     <!-- gioio thieu -->
     <div class="btn">
-        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" rel="noopener noreferrer" >Giới Thiệu</a>
     </div>
     <!-- tin tucws -->
     <div class="news-btn">
