--- a/FrontEnd/html/Carts.html
+++ b/FrontEnd/html/Carts.html
@@ -39,7 +39,7 @@
         <i class="fa-solid fa-house-user"></i><a href="Home.html">Trang Chủ </a>
       </div>
       <div class="btn">
-        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html"  rel="noopener noreferrer" >Giới Thiệu</a>
       </div>
 
       <div class="news-btn">
