--- a/FrontEnd/html/Phone.html
+++ b/FrontEnd/html/Phone.html
@@ -41,7 +41,7 @@
 
     <!-- Location -->
     <div class="btn">
-        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" target="_blank" rel="noopener noreferrer" >Giới Thiệu</a>
+        <i class="fa-solid fa-newspaper"></i> <a href="Introduce.html" rel="noopener noreferrer" >Giới Thiệu</a>
     </div>
 
     <!-- Search -->
