--- a/FrontEnd/html/Carts.html
+++ b/FrontEnd/html/Carts.html
@@ -79,12 +79,12 @@
         <thead>
           <tr>
             <th></th>
-            <th>Thông tin để nhận hàng</th>
+            <th>Vui lòng điền thông tin để nhận hàng</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Họ Và Tên Người </td>
+            <td>Họ Và Tên Người Nhận</td>
             <td><input type="text"></td>
           </tr>
           <tr>
@@ -96,11 +96,15 @@
             <td><input type="text"></td>
           </tr>
           <tr>
+            <td>Ghi chú</td>
+            <td><input type="text"></td>
+          </tr>
+          <tr>
             <td>Chọn Phương thức thanh toán</td>
             <td>
               <select id="fruit" name="fruit">
-                <option value="apple">Thanh toán khi nhận hàng</option>
-                <option value="banana">Thanh toán bằng Vietted Pay</option>
+                <option value="receive" >Thanh toán khi nhận hàng</option>
+                <option value="Viettel pay">Thanh toán bằng Viettel Pay</option>
               </select>
             </td>
           </tr>
