--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -227,7 +227,7 @@
         <div class="section-three-content">
           <div class="box">
             <div class="box-Head"> Về Văn Thành Shop </div>
-            <a href="">Giới Thiệu Công Ty</a>
+            <a href="Introduce.html">Giới Thiệu Công Ty</a>
             <a href="">Tuyển Dụng</a>
             <a href="">Liên Hệ</a>
         </div>
