--- a/FrontEnd/html/OrderList.html
+++ b/FrontEnd/html/OrderList.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/Home_header.css">
     <script src="../javaScript/Home.js"></script>
     <script src="../javaScript/OrderList.js"></script>
+    <link rel="stylesheet" href="../css/OrderList.css">
+    <link rel="stylesheet" href="../css/Home_footer.css">
     
 </head>
 <body>
@@ -74,6 +76,9 @@
 
 <div class="section-one">
     <div class="order-list" id="order_list"></div>
+</div>
+<div class="section-two">
+    <div class="listItems" id="list_items"></div>
 </div>
 </body>
 </html>
