--- a/FrontEnd/html/News.html
+++ b/FrontEnd/html/News.html
@@ -65,7 +65,7 @@
         <ul>
             <li><a href="LoginClient.html">Đăng nhập</a></li>
             <li><a href="Profile.html">Profile </a></li>
-            <li><a href="Register.html">Đăng xuất</a></li>
+            <li><a id="logout_button" onclick="logout()">Đăng xuất</a></li>
         </ul>
         </div>
     </div>
