--- a/FrontEnd/html/Profile.html
+++ b/FrontEnd/html/Profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyInfo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <script src="../javaScript/MyInfo.js"></script>
     <link rel="stylesheet" href="../css/Home_header.css">
     <link rel="stylesheet" href="../css/Profile.css">
@@ -67,7 +68,7 @@
         <ul>
         <li><a href="LoginClient.html">Đăng nhập</a></li>
         <li><a href="Profile.html">Profile </a></li>
-        <li><a href="Register.html">Đăng xuất</a></li>
+        <li><a id="logout_button" onclick="logout()">Đăng xuất</a></li>
         </ul>
     </div>
     </div>
