--- a/FrontEnd/1_FrontEndOfAdmin/html/Home.html
+++ b/FrontEnd/1_FrontEndOfAdmin/html/Home.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/HomeAdmin.css">
   <script src="../javaScript/productPage.js"></script>
   <script src="../javaScript/newsPage.js"></script>
+  <script src="../javaScript/userPage.js"></script>
 
 </head>
 <body>
@@ -22,7 +23,7 @@
           <li><div><i class="fa-regular fa-house"></i>Trang chủ </div></li>
           <li><div onclick="productPage()"><i class="fa-solid fa-mobile"></i>Quản lý sản phẩm</div></li>
           <li><div onclick="newsPage()"><i class="fa-solid fa-newspaper"></i>Quản lý Tin Tức</div></li>
-          <li><div><i class="fa-solid fa-person"></i>Quản lý người dùng</div></li>
+          <li><div onclick="userPage()"><i class="fa-solid fa-person"></i>Quản lý người dùng</div></li>
           <li><div><i class="fa-solid fa-truck"></i>Quản lý đặt hàng</div></li>
         </ul>
       </div>
